Default routes added

--- a/src/app/fastfood-module/UI/register-page/register-page.component.html
+++ b/src/app/fastfood-module/UI/register-page/register-page.component.html
@@ -46,6 +46,8 @@
     </button>
   </mat-form-field>
 
+  <mat-checkbox>Admin</mat-checkbox>
+
   <div class="example-button-row">
     <button mat-raised-button
             color="accent"
