--- a/src/app/fastfood-module/UI/categories-pages/categories-pages.component.html
+++ b/src/app/fastfood-module/UI/categories-pages/categories-pages.component.html
@@ -1,24 +1,23 @@
 <mat-tab-group mat-align-tabs="center"
-               color="primary"
-               backgroundColor="accent">
+               color="accent"
+               backgroundColor="primary">
   <mat-tab label="Pizza">
 
     <mat-card class="dish-card" *ngFor="let dish of allDishes">
-      <img mat-card-image src="{{dish.img}}" alt="Photo of a Shiba Inu">
+      <img mat-card-image src="{{dish.img}}" alt="{{dish.name}}">
       <mat-card-title>{{dish.name}}</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
       <mat-card-header>
       </mat-card-header>
       <mat-card-content>
         <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-          bred for hunting.
+          <mat-chip-list aria-label="Fish selection">
+            <mat-chip>One fish <mat-icon matChipRemove>cancel</mat-icon></mat-chip>
+          </mat-chip-list>
         </p>
       </mat-card-content>
       <mat-card-actions>
+        <span>{{dish.price}}</span>
         <button mat-button>ORDER</button>
-        <button mat-button>SHARE</button>
       </mat-card-actions>
     </mat-card>
 
