--- a/src/app/fastfood-module/UI/categories-pages/categories-pages.component.html
+++ b/src/app/fastfood-module/UI/categories-pages/categories-pages.component.html
@@ -3,7 +3,7 @@
                backgroundColor="primary">
   <mat-tab label="Pizza">
 
-    <mat-card class="dish-card" *ngFor="let dish of allDishes">
+    <mat-card *ngFor="let dish of pizzasList">
       <img mat-card-image src="{{dish.img}}" alt="{{dish.name}}">
       <mat-card-title>{{dish.name}}</mat-card-title>
       <mat-card-header>
@@ -11,7 +11,7 @@
       <mat-card-content>
         <p>
           <mat-chip-list aria-label="Fish selection">
-            <mat-chip>One fish <mat-icon matChipRemove>cancel</mat-icon></mat-chip>
+            <mat-chip *ngFor="let ingredient of dish.ingredients">{{ingredient.name}}<mat-icon matChipRemove>cancel</mat-icon></mat-chip>
           </mat-chip-list>
         </p>
       </mat-card-content>
@@ -23,6 +23,64 @@
 
   </mat-tab>
 
-  <mat-tab label="Burgers"> Content 2 </mat-tab>
-  <mat-tab label="Deserts"> Content 3 </mat-tab>
+  <mat-tab label="Potato">
+
+    <mat-card *ngFor="let dish of potatoList">
+      <img mat-card-image src="{{dish.img}}" alt="{{dish.name}}">
+      <mat-card-title>{{dish.name}}</mat-card-title>
+      <mat-card-header>
+      </mat-card-header>
+      <mat-card-content>
+        <p>
+          <mat-chip-list aria-label="Fish selection">
+            <mat-chip *ngFor="let ingredient of dish.ingredients">{{ingredient.name}}<mat-icon matChipRemove>cancel</mat-icon></mat-chip>
+          </mat-chip-list>
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <span>{{dish.price}}</span>
+        <button mat-button>ORDER</button>
+      </mat-card-actions>
+    </mat-card>
+  </mat-tab>
+
+  <mat-tab label="Salad">
+    <mat-card *ngFor="let dish of saladsList">
+      <img mat-card-image src="{{dish.img}}" alt="{{dish.name}}">
+      <mat-card-title>{{dish.name}}</mat-card-title>
+      <mat-card-header>
+      </mat-card-header>
+      <mat-card-content>
+        <p>
+          <mat-chip-list aria-label="Fish selection">
+            <mat-chip *ngFor="let ingredient of dish.ingredients">{{ingredient.name}}<mat-icon matChipRemove>cancel</mat-icon></mat-chip>
+          </mat-chip-list>
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <span>{{dish.price}}</span>
+        <button mat-button>ORDER</button>
+      </mat-card-actions>
+    </mat-card>
+  </mat-tab>
+
+  <mat-tab label="Deserts">
+    <mat-card *ngFor="let dish of desertsList">
+      <img mat-card-image src="{{dish.img}}" alt="{{dish.name}}">
+      <mat-card-title>{{dish.name}}</mat-card-title>
+      <mat-card-header>
+      </mat-card-header>
+      <mat-card-content>
+        <p>
+          <mat-chip-list aria-label="Fish selection">
+            <mat-chip *ngFor="let ingredient of dish.ingredients">{{ingredient.name}}<mat-icon matChipRemove>cancel</mat-icon></mat-chip>
+          </mat-chip-list>
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <span>{{dish.price}}</span>
+        <button mat-button>ORDER</button>
+      </mat-card-actions>
+    </mat-card>
+  </mat-tab>
 </mat-tab-group>
