Dish-info modal dialog created

--- a/src/app/fastfood-module/UI/categories-pages/categories-pages.component.css
+++ b/src/app/fastfood-module/UI/categories-pages/categories-pages.component.css
@@ -23,6 +23,7 @@
   width: 1fr;
   height: 380px;
   border-radius: 1em;
+  padding-bottom: 0;
 }
 :host ::ng-deep .mat-card:hover {
   box-shadow: 1px 1px 39px -5px rgba(255, 255, 255, 0.2);
@@ -35,14 +36,21 @@
 :host ::ng-deep .mat-card-title {
   margin-bottom: 1em;
 }
+:host ::ng-deep .mat-card-title mat-icon {
+  float: right;
+}
 
 :host ::ng-deep .mat-card-actions {
   text-align: center;
   padding: 0;
+  display: flex;
+  justify-content: space-between;
+  vertical-align: bottom;
 }
-:host ::ng-deep .mat-card-actions span {
-  margin-right: 0.5em;
-  font-size: 1.5em;
+:host ::ng-deep .mat-card-actions .price {
+  margin-left: 0.5em;
+  font-size: 1.3em;
+  color: aliceblue;
 }
 
 :host ::ng-deep .mat-card-content {
