--- a/src/app/fastfood-module/UI/modal-dialogs/dish-info-dialog/dish-info-dialog.component.css
+++ b/src/app/fastfood-module/UI/modal-dialogs/dish-info-dialog/dish-info-dialog.component.css
@@ -1,3 +1,28 @@
+.mat-dialog-title {
+  text-align: center;
+  margin-bottom: 1em;
+  margin-top: -12px;
+}
 
+:host ::ng-deep .mat-dialog-content {
+  width: 500px;
+  max-height: max-content;
+  overflow: inherit;
+  text-align: center;
+}
+:host ::ng-deep .mat-dialog-content .mat-card-image {
+  width: 100%;
+  height: 250px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+:host ::ng-deep .mat-dialog-actions {
+  justify-content: space-between;
+}
+:host ::ng-deep .mat-dialog-actions .price {
+  font-size: 1.8em;
+  text-align: center;
+}
 
 /*# sourceMappingURL=dish-info-dialog.component.css.map */
