Order state created

--- a/src/app/fastfood-module/UI/categories-pages/categories-pages.component.html
+++ b/src/app/fastfood-module/UI/categories-pages/categories-pages.component.html
@@ -20,7 +20,9 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-button class="price">{{dish.price}}</button>
-        <button mat-stroked-button color="accent">Order</button>
+        <button mat-stroked-button
+                color="accent"
+                (click)="addToOrder(dish)">Order</button>
       </mat-card-actions>
     </mat-card>
 
@@ -40,7 +42,9 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-button class="price">{{dish.price}}</button>
-        <button mat-stroked-button color="accent">Order</button>
+        <button mat-stroked-button
+                color="accent"
+                (click)="addToOrder(dish)">Order</button>
       </mat-card-actions>
     </mat-card>
   </mat-tab>
@@ -58,7 +62,9 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-button class="price">{{dish.price}}</button>
-        <button mat-stroked-button color="accent">Order</button>
+        <button mat-stroked-button
+                color="accent"
+                (click)="addToOrder(dish)">Order</button>
       </mat-card-actions>
     </mat-card>
   </mat-tab>
@@ -76,7 +82,9 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-button class="price">{{dish.price}}</button>
-        <button mat-stroked-button color="accent">Order</button>
+        <button mat-stroked-button
+                color="accent"
+                (click)="addToOrder(dish)">Order</button>
       </mat-card-actions>
     </mat-card>
   </mat-tab>
