--- a/src/app/shared/layouts/header/header.component.scss
+++ b/src/app/shared/layouts/header/header.component.scss
@@ -3,4 +3,19 @@ a{
   text-decoration: none;
 }
 
-
+:host ::ng-deep .mat-toolbar{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 2em;
+  padding-right: 2em;
+  button{
+    margin-right: 1em;
+    :last-child{
+      margin-right: 0;
+    }
+    :first-child{
+      margin-right: 0;
+    }
+  }
+}
