--- a/src/app/shared/layouts/header/header.component.html
+++ b/src/app/shared/layouts/header/header.component.html
@@ -1,21 +1,26 @@
-<mat-toolbar class="w-100">
+<mat-toolbar>
   <h2><a routerLink="/TheEda">TheEda</a></h2>
 
-  <button mat-icon-button class="right">
-    <mat-icon>shopping_cart</mat-icon>
-  </button>
+  <div class="right">
+    <button mat-icon-button class="right">
+      <mat-icon [matBadgeHidden]="orderList.length === 0"
+                [matBadge]="orderList.length"
+                matBadgeColor="accent">shopping_cart</mat-icon>
+    </button>
 
-  <button mat-icon-button class="right">
-    <mat-icon>account_circle</mat-icon>
-  </button>
-  <button mat-stroked-button
-          routerLinkActive="active"
-          routerLink="/login"
-          color="accent">Log in
-  </button>
-  <button mat-stroked-button
-          routerLinkActive="active"
-          routerLink="/register"
-          color="primary">Sign up
-  </button>
+    <button mat-icon-button class="right">
+      <mat-icon>account_circle</mat-icon>
+    </button>
+    <button mat-stroked-button
+            routerLinkActive="active"
+            routerLink="/login"
+            color="accent">Log in
+    </button>
+    <button mat-stroked-button
+            routerLinkActive="active"
+            routerLink="/register"
+            color="primary">Sign up
+    </button>
+  </div>
+
 </mat-toolbar>
