--- a/src/app/fastfood-module/widget/main-page-view/main-page-view.component.html
+++ b/src/app/fastfood-module/widget/main-page-view/main-page-view.component.html
@@ -1,5 +1,2 @@
-<app-header [orderList]="orderList$ | async"></app-header>
-<app-categories-pages [pizzasList]="pizzasList$ | async"
-                      [potatoList]="potatoList$ | async"
-                      [saladsList]="saladsList$ | async"
-                      [desertsList]="desertsList$ | async"></app-categories-pages>
+<app-header></app-header>
+<app-categories-pages></app-categories-pages>
