--- a/src/app/fastfood-module/UI/modal-dialogs/dish-info-dialog/dish-info-dialog.component.html
+++ b/src/app/fastfood-module/UI/modal-dialogs/dish-info-dialog/dish-info-dialog.component.html
@@ -3,12 +3,18 @@
   <img mat-card-image src="{{data.img}}" alt="{{data.name}}">
   <p>
     <mat-chip-list aria-label="Fish selection">
-      <mat-chip *ngFor="let ingredient of data.ingredients">{{ingredient.name}}<mat-icon matChipRemove>cancel</mat-icon></mat-chip>
+      <mat-chip *ngFor="let ingredient of data.ingredients">{{ingredient.name}}
+        <mat-icon matChipRemove>cancel</mat-icon>
+      </mat-chip>
     </mat-chip-list>
   </p>
 </div>
 <div mat-dialog-actions>
-  <button mat-stroked-button mat-dialog-close>Close</button>
-  <span class="price">{{data.price}}</span>
-  <button mat-stroked-button color="accent">Order</button>
+  <button mat-stroked-button
+          mat-dialog-close
+          (click)="close()">Close</button>
+  <span class="price">{{data.price}} $</span>
+  <button mat-stroked-button
+          color="accent"
+          (click)="addToOrder(data)">Order</button>
 </div>
