--- a/src/app/fastfood-module/UI/modal-dialogs/dish-info-dialog/dish-info-dialog.component.html
+++ b/src/app/fastfood-module/UI/modal-dialogs/dish-info-dialog/dish-info-dialog.component.html
@@ -12,9 +12,11 @@
 <div mat-dialog-actions>
   <button mat-stroked-button
           mat-dialog-close
-          (click)="close()">Close</button>
+          (click)="close()">Close
+  </button>
   <span class="price">{{data.price}} $</span>
   <button mat-stroked-button
           color="accent"
-          (click)="addToOrder(data)">Order</button>
+          (click)="addToOrder(data)">Order
+  </button>
 </div>
