--- a/src/app/fastfood-module/UI/order-page/order-page.component.html
+++ b/src/app/fastfood-module/UI/order-page/order-page.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<h2 class="totalPrice">Total price: {{totalPrice}} $</h2>
 <mat-tab-group mat-align-tabs="center"
                color="accent"
                backgroundColor="primary"
