--- a/src/app/admin-module/modals/add-dish-modal/add-dish-modal.component.html
+++ b/src/app/admin-module/modals/add-dish-modal/add-dish-modal.component.html
@@ -66,10 +66,12 @@
 
 <div mat-dialog-actions>
   <button mat-stroked-button
-          mat-dialog-close (click)="close()">Close</button>
+          mat-dialog-close (click)="close()">Close
+  </button>
   <button mat-stroked-button
           [disabled]="dishTitle.invalid || dishImg.invalid || dishPrice.invalid || dishCategory.invalid"
-          color="accent" (click)="createNewDish(newDishName, newDishImg, newDishPrice, newDishIngredients, newDishCategory)">
+          color="accent"
+          (click)="createNewDish(newDishName, newDishImg, newDishPrice, newDishIngredients, newDishCategory)">
     Save
   </button>
 </div>
