--- a/src/app/fastfood-module/UI/login-page/login-page.component.css
+++ b/src/app/fastfood-module/UI/login-page/login-page.component.css
@@ -6,7 +6,7 @@
   max-width: 400px;
   width: 100%;
   border-radius: 2em;
-  background-color: #bdbdbd;
+  background-color: #5339a2;
 }
 
 .example-full-width {
@@ -57,6 +57,13 @@ input.example-right-align {
 }
 .example-button-row button {
   margin-right: 1em;
+}
+
+.center {
+  text-align: center;
+}
+.center .link {
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=login-page.component.css.map */
