--- a/src/app/fastfood-module/UI/login-page/login-page.component.html
+++ b/src/app/fastfood-module/UI/login-page/login-page.component.html
@@ -1,5 +1,4 @@
-<form class="example-form p-3"
-      (ngSubmit)="onSubmit()">
+<form class="example-form p-3">
   <mat-card-header>
     <mat-card-title>Log in</mat-card-title>
   </mat-card-header>
@@ -14,7 +13,7 @@
            id="email"
            matInput
            [formControl]="emailFormControl"
-           [errorStateMatcher]="matcher"
+           [(ngModel)]="userEmail"
            placeholder="Ex. pat@example.com">
 
     <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
@@ -34,6 +33,7 @@
 
     <input matInput
            id="password"
+           [(ngModel)]="password"
            [formControl]="passwordFormControl"
            [type]="hide ? 'password' : 'text'">
 
@@ -52,16 +52,19 @@
     <mat-error *ngIf="passwordFormControl.hasError('required')">
       Password is <strong>required</strong>
     </mat-error>
-
   </mat-form-field>
+
+  <section class="example-section">
+    <mat-checkbox class="example-margin" name="isAdmin" [(ngModel)]="checked">I am admin</mat-checkbox>
+  </section>
   <div class="example-button-row">
     <button mat-raised-button
             color="accent"
-            type="submit">Lon in
+            [disabled]="!userEmail || !password"
+            (click)="onSubmit(userEmail, password, checked)">Lon in
     </button>
-    <button mat-raised-button
-            color="primary"
-            routerLink="/register">Sign up
-    </button>
+  </div>
+  <div class="center">
+    <a>New user? Click to <b routerLink="/register" class="link">sign up</b></a>
   </div>
 </form>
