--- a/src/app/fastfood-module/UI/order-page/order-page.component.scss
+++ b/src/app/fastfood-module/UI/order-page/order-page.component.scss
@@ -63,3 +63,10 @@
     width: 0;
   }
 }
+
+.totalPrice{
+  text-align: center;
+  background: #86dc86;
+  color: aliceblue;
+  margin-bottom: 0;
+}
