--- a/src/app/fastfood-module/UI/register-page/register-page.component.html
+++ b/src/app/fastfood-module/UI/register-page/register-page.component.html
@@ -5,15 +5,20 @@
 
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>Enter your user name</mat-label>
-    <input matInput>
+    <input matInput
+           [(ngModel)]="userName"
+           name="name">
+    <mat-error *ngIf="nameFormControl.hasError('required')">
+      Name is <strong>required</strong>
+    </mat-error>
   </mat-form-field>
 
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>Email</mat-label>
     <input type="email" matInput
-           [formControl]="emailFormControl"
-           [errorStateMatcher]="matcher"
-           placeholder="Ex. pat@example.com">
+           placeholder="Ex. pat@example.com"
+           [(ngModel)]="userEmail"
+           name="email">
     <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
       Please enter a valid email address
     </mat-error>
@@ -25,7 +30,12 @@
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>Enter your password</mat-label>
     <input matInput
-           [type]="hide ? 'password' : 'text'">
+           [(ngModel)]="password"
+           [type]="hide ? 'password' : 'text'"
+           name="password">
+    <mat-error *ngIf="passwordFormControl.hasError('required')">
+      Password is <strong>required</strong>
+    </mat-error>
     <button mat-icon-button
             matSuffix (click)="hide = !hide"
             [attr.aria-label]="'Hide password'"
@@ -35,9 +45,14 @@
   </mat-form-field>
 
   <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Enter your password opat</mat-label>
+    <mat-label>Enter your password again</mat-label>
     <input matInput
-           [type]="hide ? 'password' : 'text'">
+           [(ngModel)]="secondPasswordEnter"
+           [type]="hide ? 'password' : 'text'"
+           name="password">
+    <mat-error *ngIf="secondPasswordFormControl.hasError('required')">
+      Repeat password is <strong>required</strong>
+    </mat-error>
     <button mat-icon-button
             matSuffix (click)="hide = !hide"
             [attr.aria-label]="'Hide password'"
@@ -46,15 +61,15 @@
     </button>
   </mat-form-field>
 
-  <mat-checkbox>Admin</mat-checkbox>
+  <section class="example-section">
+    <mat-checkbox class="example-margin" name="isAdmin" [(ngModel)]="checked">Admin</mat-checkbox>
+  </section>
 
   <div class="example-button-row">
     <button mat-raised-button
-            color="accent"
-            routerLink="/login">Lon in
-    </button>
-    <button mat-raised-button
-            color="primary">Sign up
+            color="primary"
+            [disabled]="!userName || !userEmail || !password || !secondPasswordEnter"
+            (click)="onSubmit(userName, userEmail, password, secondPasswordEnter, checked)">Sign up
     </button>
   </div>
 </form>
