Log in and sinn up logic improved, auth header added

--- a/src/app/admin-module/admin-page/admin-page.component.css
+++ b/src/app/admin-module/admin-page/admin-page.component.css
@@ -4,6 +4,7 @@
   background-attachment: scroll;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%;
 }
 
 :host ::ng-deep .mat-tab-body-wrapper {
