--- a/src/app/fastfood-module/UI/login-page/login-page.component.html
+++ b/src/app/fastfood-module/UI/login-page/login-page.component.html
@@ -1,10 +1,10 @@
-<form class="example-form p-3">
-  <mat-card-header>
-    <mat-card-title>Log in</mat-card-title>
+<form class="login-form">
+  <mat-card-header class="center">
+    <mat-card-title class="loginTitle">Log in</mat-card-title>
   </mat-card-header>
 
   <mat-form-field
-    class="example-full-width"
+    class="full-width"
     appearance="fill">
 
     <mat-label>Email</mat-label>
@@ -26,7 +26,7 @@
 
   </mat-form-field>
 
-  <mat-form-field class="example-full-width"
+  <mat-form-field class="full-width"
                   appearance="fill">
 
     <mat-label>Enter your password</mat-label>
@@ -54,13 +54,13 @@
     </mat-error>
   </mat-form-field>
 
-  <section class="example-section">
-    <mat-checkbox class="example-margin" name="isAdmin" [(ngModel)]="checked">I am admin</mat-checkbox>
+  <section class="section">
+    <mat-checkbox class="margin" name="isAdmin" [(ngModel)]="checked">I am admin</mat-checkbox>
   </section>
-  <div class="example-button-row">
+  <div class="button-row">
     <button mat-raised-button
             color="accent"
-            [disabled]="!userEmail || !password"
+            [disabled]="!userEmail || emailFormControl.hasError('email') || passwordFormControl.hasError('minlength') || !password"
             (click)="onSubmit(userEmail, password, checked)">Lon in
     </button>
   </div>
