--- a/src/app/fastfood-module/UI/order-page/order-page.component.css
+++ b/src/app/fastfood-module/UI/order-page/order-page.component.css
@@ -4,6 +4,7 @@
   background-attachment: scroll;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%;
 }
 
 :host ::ng-deep .mat-tab-body-wrapper {
