--- a/src/app/fastfood-module/UI/order-page/order-page.component.html
+++ b/src/app/fastfood-module/UI/order-page/order-page.component.html
@@ -26,7 +26,7 @@
         <button mat-button class="price">{{dish.price}} $</button>
         <button mat-raised-button
                 color="warn"
-                (click)="removeFromOrder(dish.id)">-
+                (click)="removeFromOrder(dish, dish.id)">-
         </button>
         <button mat-raised-button
                 color="accent"
