--- a/src/app/fastfood-module/UI/order-page/order-page.component.scss
+++ b/src/app/fastfood-module/UI/order-page/order-page.component.scss
@@ -4,7 +4,7 @@
   background-attachment: scroll;
   background-repeat: no-repeat;
   background-size: cover;
-  //height: 100%;
+  height: 100%;
 }
 
 :host ::ng-deep .mat-tab-body-wrapper {
