--- a/src/app/fastfood-module/UI/register-page/register-page.component.html
+++ b/src/app/fastfood-module/UI/register-page/register-page.component.html
@@ -1,9 +1,9 @@
-<form class="example-form p-3">
-  <mat-card-header>
-    <mat-card-title>Registration</mat-card-title>
+<form class="login-form">
+  <mat-card-header class="center">
+    <mat-card-title class="loginTitle">Registration</mat-card-title>
   </mat-card-header>
 
-  <mat-form-field class="example-full-width" appearance="fill">
+  <mat-form-field class="full-width" appearance="fill">
     <mat-label>Enter your user name</mat-label>
     <input matInput
            [(ngModel)]="userName"
@@ -13,7 +13,7 @@
     </mat-error>
   </mat-form-field>
 
-  <mat-form-field class="example-full-width" appearance="fill">
+  <mat-form-field class="full-width" appearance="fill">
     <mat-label>Email</mat-label>
     <input type="email" matInput
            placeholder="Ex. pat@example.com"
@@ -27,7 +27,7 @@
     </mat-error>
   </mat-form-field>
 
-  <mat-form-field class="example-full-width" appearance="fill">
+  <mat-form-field class="full-width" appearance="fill">
     <mat-label>Enter your password</mat-label>
     <input matInput
            [(ngModel)]="password"
@@ -35,6 +35,9 @@
            name="password">
     <mat-error *ngIf="passwordFormControl.hasError('required')">
       Password is <strong>required</strong>
+    </mat-error>
+    <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
+      Password should contain <strong>8 or more symbols</strong>
     </mat-error>
     <button mat-icon-button
             matSuffix (click)="hide = !hide"
@@ -44,7 +47,7 @@
     </button>
   </mat-form-field>
 
-  <mat-form-field class="example-full-width" appearance="fill">
+  <mat-form-field class="full-width" appearance="fill">
     <mat-label>Enter your password again</mat-label>
     <input matInput
            [(ngModel)]="secondPasswordEnter"
@@ -52,6 +55,9 @@
            name="password">
     <mat-error *ngIf="secondPasswordFormControl.hasError('required')">
       Repeat password is <strong>required</strong>
+    </mat-error>
+    <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
+      Password should contain <strong>8 or more symbols</strong>
     </mat-error>
     <button mat-icon-button
             matSuffix (click)="hide = !hide"
@@ -65,10 +71,10 @@
     <mat-checkbox class="example-margin" name="isAdmin" [(ngModel)]="checked">Admin</mat-checkbox>
   </section>
 
-  <div class="example-button-row">
+  <div class="button-row">
     <button mat-raised-button
             color="primary"
-            [disabled]="!userName || !userEmail || !password || !secondPasswordEnter"
+            [disabled]="!userName || !userEmail || !password || !secondPasswordEnter ||  emailFormControl.hasError('email') || passwordFormControl.hasError('minlength')"
             (click)="onSubmit(userName, userEmail, password, secondPasswordEnter, checked)">Sign up
     </button>
   </div>
