--- a/src/app/fastfood-module/UI/order-page/order-page.component.html
+++ b/src/app/fastfood-module/UI/order-page/order-page.component.html
@@ -6,7 +6,7 @@
                class="my-tab-group">
   <mat-tab label="Your Order">
 
-    <mat-card *ngFor="let dish of orderList">
+    <mat-card *ngFor="let dish of orderListView">
       <img mat-card-image src="{{dish.img}}" alt="{{dish.name}}">
       <mat-card-title>{{dish.name}}
         <mat-icon (click)="openInfoDialog(dish)"
@@ -26,11 +26,11 @@
         <button mat-button class="price">{{dish.price}} $</button>
         <button mat-raised-button
                 color="warn"
-                (click)="removeFromOrder(dish, dish.id)">-
+                (click)="removeFromOrder(dish.price, (dish.id.toString()))">-
         </button>
         <button mat-raised-button
                 color="accent"
-                (click)="addToOrder(dish, dish.name, dish.img, dish.price, dish.ingredients, dish.category)">+
+                (click)="addToOrder(dish.price, (dish.id).toString())">+
         </button>
       </mat-card-actions>
     </mat-card>
