Order list effects created

--- a/src/app/fastfood-module/UI/modal-dialogs/dish-info-dialog/dish-info-dialog.component.html
+++ b/src/app/fastfood-module/UI/modal-dialogs/dish-info-dialog/dish-info-dialog.component.html
@@ -16,7 +16,8 @@
   </button>
   <span class="price">{{data.price}} $</span>
   <button mat-stroked-button
-          color="accent"
-          (click)="addToOrder(data)">Order
+          color="accent">Order
+<!--          (click)="addToOrder(data)"-->
+<!--  >Order-->
   </button>
 </div>
