--- a/src/app/fastfood-module/UI/categories-pages/categories-pages.component.html
+++ b/src/app/fastfood-module/UI/categories-pages/categories-pages.component.html
@@ -26,7 +26,7 @@
             <button mat-button class="price">{{dish.price}} $</button>
             <button mat-stroked-button
                     color="accent"
-                    (click)="addToOrder((dish.id).toString())">Order
+                    (click)="addToOrder(dish.id)">Order
             </button>
           </mat-card-actions>
         </mat-card>
